--- a/public/home.html
+++ b/public/home.html
@@ -36,22 +36,22 @@
               <div class="carousel-item active">
                 <img src="./images/homec1.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5 >Reliable Arts</h5>
-                  <p2 >Since 1940</p2>
+                  <h5>Reliable Arts</h5>
+                  <h5 >Since 1940</h5>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./images/homec2.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5 >The Royal Creation</h5>
-                  <p2 >The Quality Which Justifies The Price</p2>
+                  <h5 >The Quality Which Justifies The Price</h5>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./images/homec3.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5 >Budget Friendly </h5>
-                  <p2 >Numerous Categories</p2>
+                  <h5 >Numerous Categories</h5>
                 </div>
               </div>
             </div>
